--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/depths">下界深淵</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面權能</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面勢力</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠團夥</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/swamp">沼澤棲物</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/experiments">扭曲實驗體</a> </li>
