--- a/monsters/overview/index.html
+++ b/monsters/overview/index.html
@@ -83,7 +83,7 @@
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/woods">幽暗森林</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/undead">不死軍團</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/depths">下界深淵</a> </li>
-         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面權能</a> </li>
+         <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/planes">位面勢力</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/hordes">貪掠團夥</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/swamp">沼澤棲物</a> </li>
          <li><a href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/monsters/experiments">扭曲實驗體</a> </li>
@@ -183,13 +183,20 @@
 <p class="NoIndent"><tag class="green">大型 (Large)</tag>: 牠比人類要大上許多，差不多跟馬車一樣大。</p>
 <p class="NoIndent"><tag class="green">巨型 (Huge)</tag>: 牠和一棟小房子一樣大，或甚至還要再更大。</p>
 <hr/>
-<h2>Making Monsters</h2>
-<p class="NoIndent">Monsters start with your description of them. Whether you’re making the monster before play or just as the players come face-to-face with it, every monster starts with a clear vision of what it is and what it does.</p>
-<p>If you’re making a monster between sessions start by imagining it. Imagine what it looks like, what it does, why it stands out. Imagine the stories told about it and what effects it has had on the world.</p>
-<p>If you’re making a monster on the fly during a session start by describing it to the players. Your description starts before the characters even lay eyes on it: describe where it lives, what marks it has made on the environment around it. Your description is the key to the monster.</p>
-<p>When you find you need stats for the monster you use this series of questions to establish them. Answer every question based on the facts established and imagined. Don’t answer them aloud to anyone else, just note down the answers and the stats listed with each answer.</p>
-<p>If two questions would grant the same tag don’t worry about it. If you like you can adjust damage or HP by 2 to reflect the tag that would be repeated, but it’s not necessary. If a combination of answers would reduce HP or damage below 1 they stay at 1.</p>
-<p>When you’re finished your monster may have only one move. If this is the case and you plan on using the monster often, give it another 1–2 moves of your choice. These moves often describe secondary modes of attack, other uses for a primary mode of attack, or connections to a certain place in the world.</p>
+
+<h2>創建怪物</h2>
+<p class="NoIndent">
+	創建怪物的開頭源自於你對牠們的描述。無論你是在開始遊戲前預備牠們、還是在與玩家們面對面遊戲時才即興編寫，所有的怪物都會從一個能清晰浮現在你腦中的形象開始創作，勾勒出牠是什麼樣的存在、以及牠會做出什麼樣的事情。</p>
+<p>
+	如果你在聚會與聚會之間的空檔創作怪物，那麼從「想像」開始著手。想像一下牠長什麼樣子？牠會做什麼？牠又為什麼脫穎而出？想像一下那些關於牠的傳聞故事、以及牠會對這個世界造成什麼樣的影響。</p>
+<p>
+	如果你是在聚會途中即興創建怪物，那麼你可以從向玩家們描述關於牠的情報開始著手。你甚至可以在角色們目擊到牠之前就開始描述：描述牠棲習於何處，牠在周遭環境又留下了什麼樣的記號。你的描述就是這頭怪物的關鍵。</p>
+<p>
+	當你發現你需要為怪物設定屬性數值時，你可以使用下列一連串的問題來確立這些數值。根據你已經建立和想像的事實來回答這些問題。不要在別人面前大聲回答，你只需要記下這些問題的答案，並記錄每個答案後方所列出的相應數據。</p>
+<p>
+	假如發生了多個問題的回答導致怪物獲得了重複的標籤，不用擔心。如果你希望的話，你可以調整怪物的 傷害 或 生命值，使其增減 2 點來反映出標籤重複帶來的影響，但這並不是必須的。若多個答案的組合會導致怪物的 傷害 或 生命值 降到 1 以下，那麼該數值將保持在 1。</p>
+<p>
+	當你完成創建，你的怪物可能仍只擁有一個動作。若發生這種情況，且你打算經常在故事中使用這頭怪物的話，那麼你可以給牠另外 1-2 個你所選擇的動作。這些動作通常描述著這頭怪物的次要攻擊手段、主要攻擊手段的其他用途、或與這個世界中某個特定場所之間的聯繫。</p>
 
 <h4>牠以會採取什麼樣的行為而聞名？</h4>
 <p>寫下一個<strong>怪物動作</strong>，描述牠會做什麼事情。</p>
@@ -257,35 +264,37 @@
 	<li>牠厭惡暴力行動: 擲兩次傷害骰，取低</li></ul>
 <hr/>
 
-<h2>Treasure</h2>
-<p class="NoIndent">Monsters, much like adventurers, collect shiny useful things. When the players search the belongings of a monster (be they on their person or tucked away somewhere) describe them honestly.</p>
-<p class="NoIndent">If the monster has accumulated some wealth you can roll that randomly. Start with the monster’s damage die, modified if the monster is:</p>
-<ul><li>Hoarder: roll damage die twice, take higher result</li>
-<li>Far from home: add at least one ration (usable by anyone with similar taste)</li>
-<li>Magical: some strange item, possibly magical</li>
-<li>Divine: a sign of a deity (or deities)</li>
-<li>Planar: something not of this earth</li>
-<li>Lord over others: +1d4 to the roll</li>
-<li>Ancient and noteworthy: +1d4 to the roll</li></ul>
-<p class="NoIndent">Roll the monster’s damage die plus any added dice to find the monster’s treasure:</p>
-<ol><li class="NumberedList">A few coins, 2d8 or so</li>
-<li class="NumberedList">An item useful to the current situation</li>
-<li class="NumberedList">Several coins, about 4d10</li>
-<li class="NumberedList">A small item (gem, art) of considerable value, worth as much as 2d10×10 coins, 0 weight</li>
-<li class="NumberedList">Some minor magical trinket</li>
-<li class="NumberedList">Useful information (in the form of clues, notes, etc.)</li>
-<li class="NumberedList">A bag of coins, 1d4×100 or thereabouts. 1 weight per 100.</li>
-<li class="NumberedList">A very valuable small item (gem, art) worth 2d6×100, 0 weight</li>
-<li class="NumberedList">A chest of coins and other small valuables. 1 weight but worth 3d6×100 coins.</li>
-<li class="NumberedList">A magical item or magical effect</li>
-<li class="NumberedList">Many bags of coins for a total of 2d4×100 or so</li>
-<li class="NumberedList">A sign of office (crown, banner) worth at least 3d4×100 coins</li>
-<li class="NumberedList">A large art item worth 4d4×100 coins, 1 weight</li>
-<li class="NumberedList">A unique item worth at least 5d4×100 coins</li>
-<li class="NumberedList">All the information needed to learn a new spell and roll again</li>
-<li class="NumberedList">A portal or secret path (or directions to one) and roll again</li>
-<li class="NumberedList">Something relating to one of the characters and roll again</li>
-<li class="NumberedList">A hoard: 1d10×1000 coins and 1d10×10 gems worth 2d6×100 each</li></ol>
+<h2>財寶</h2>
+<p class="NoIndent">就和冒險者一樣，怪物也會收集囤積那些閃亮實用的玩意兒。當玩家們搜索怪物的財寶時（無論是牠們帶在身上還是藏在某處的），誠實地描述它們。</p>
+若怪物已經累積了一些財富，你可以擲骰選擇擲骰來隨機決定其內容。使用怪物的傷害骰做為基準，並依據怪物的性質進行調整。若怪物是……
+<ul>
+	<li>囤財者: 擲兩次傷害骰，取高</li>
+	<li>遠離家鄉: 添加至少一份口糧（能被任何有著相似口味的人使用）</li>
+	<li>魔法: 有著一些古怪的物品，很可能帶有魔法</li>
+	<li>神聖: 有著一位神祇（或諸神）的印記</li>
+	<li>異位面: 有著一些不是來自這個世界的事物</li>
+	<li>統治著他人: 擲骰結果 +1d4</li>
+	<li>古老且值得注意: 擲骰結果 +1d4</li></ul>
+
+<p class="NoIndent">擲該怪物的傷害骰，並加上任何追加的骰子，決定該怪物積累的財寶：</p>
+<ol><li class="NumberedList">幾枚金幣，2d8 枚左右</li>
+<li class="NumberedList">一個能在當前情境派上用場的物品</li>
+<li class="NumberedList">許多金幣，大約 4d10 枚</li>
+<li class="NumberedList">一件有著可觀價位的小型物品（珠寶、藝術品）價值大約 2d10×10 金幣，0 重量</li>
+<li class="NumberedList">一些有著弱效魔力的小飾品</li>
+<li class="NumberedList">實用的情報（以線索、筆記之類的形式出現）</li>
+<li class="NumberedList">一袋金幣，大約 1d4×100 枚。每 100 枚金幣的重量為 1 重量</li>
+<li class="NumberedList">一個相當值錢的小型物品（珠寶、藝術品）價值大約 2d6×100 金幣，0 重量</li>
+<li class="NumberedList">一整箱的金幣和其他值錢的小東西。1 重量，但價值 3d6×100 金幣</li>
+<li class="NumberedList">一件魔法物品或魔法效果</li>
+<li class="NumberedList">好幾袋金幣，總共 2d4×100 枚左右</li>
+<li class="NumberedList">一個權職的象徵（皇冠、旗幟）價值至少 3d4×100 金幣</li>
+<li class="NumberedList">一個大型藝術品，價值 4d4×100 金幣，1 重量</li>
+<li class="NumberedList">一個獨一無二的物品，價值至少 5d4×100 金幣</li>
+<li class="NumberedList">所有習得新法術所需的資料情報，然後再骰一次</li>
+<li class="NumberedList">一道傳送門或秘密通道（或它們所在的方向），然後再骰一次</li>
+<li class="NumberedList">某個與其中一名角色有關的事物，然後再骰一次</li>
+<li class="NumberedList">囤積的寶藏堆：1d10×1000 枚金幣 和 1d10×10 顆珠寶，每顆珠寶價值 2d6×100 金幣</li></ol>
 <hr/>
 
 <h2>Monster Settings</h2>
@@ -293,21 +302,29 @@
 <p>When creating your own monster settings, they can be more specific. You could create a monster setting for the Great Western Steppes or the Domains of the Horse Lords.</p>
 <p>Consult a monster setting to populate a front or when you want a threat that is only tangentially related to one of your fronts. For example, if the heroes are battling against the dungeon front, the cult of Khul-ka-ra, by exploring the ancient ruins that the cult has made its home then you might use monsters from the Legions of the Undead as a related threat—not truly part of the front but still a block in the heroes’ path.</p>
 <p>The monster stat blocks within the settings describe HP, damage, and all the other aspects of the monster. These monsters were created with the same process listed above, and the reasons for their stats are just as important as the stats themselves. Looking at the reasoning behind the stats will allow you to present the monsters honestly, answering questions that arise in Dungeon World like “can a warband of gnolls sack an entire village?”</p>
-<h3>Cavern Dwellers</h3>
+
+<h3>洞穴居族 (Cavern Dwellers)</h3>
 <p class="NoIndent">At the edges of civilization in the caves and tunnels below the old mountains of the world dwell all sorts of scheming, dangerous monsters. Some are wily and old, like the race of goblins scheming to burn villages and make off with livestock. Others are strange aberrations of nature like the stinking, trash-eating Otyugh. A word of caution, then, to those brave adventurers whose first foray into danger leads them into these dank and shadowy places; bad things live in the dark. Bad things with sharp teeth.</p>
-<h3>Denizens of the Swamp</h3>
+
+<h3>沼澤棲物 (Denizens of the Swamp)</h3>
 <p class="NoIndent">All things give way to rot in the end. Food spoils on the table, men’s minds go mad with age and disease. Even the world itself, when left untended and uncared for, can turn to black muck and stinking air. Things dwell in these parts of Dungeon World. Things gone just as a bad as the swirling filth that fills the swamps. In these cesspit lowlands, adventurers will find such creatures as the deadly-eyed basilisk or the famed, unkillable troll. You’ll need more than a dry pair of boots to survive these putrid fens. A sword would be a good start.</p>
-<h3>Legions of the Undead</h3>
+
+<h3>不死軍團 (Legions of the Undead)</h3>
 <p class="NoIndent">The sermons of mannish and dwarven gods would tell you that Death is the end of all. They say that once the mortal coil is unwound and a person takes their final breath that all is warmth and song and the white wings of angels. Not so. Not for all. For some, after life’s embrace loses its strength a darker power can take hold. Black magic rips the dead from the ground and gives them shambling unlife full of hate and hunger. Sorcery and witchcraft lend an ancient spell-smith the power to live forever in the husk of a Lich. There are bleak enchantments at play in shadowy corners all throughout Dungeon World. These creatures are the spawn of that fell magic.</p>
-<h3>The Dark Woods</h3>
+
+<h3>幽暗森林 (The Dark Woods)</h3>
 <p class="NoIndent">It would not be a lie to say that there are trees that stand in the deepest groves of Dungeon World that have stood since before man or elf walked amidst their roots. It would be true, too, to say that these ancient trees have long lost the green leaves of spring. In the strands of the dark woods one finds, if one looks in the right place, sylvan monsters old and powerful. Here live the race of savage centaurs and the fey soul-stealing creatures of yore. Under the shadow of the ancient trees, wolf-men howl for blood. Hurry along the old forest road and light no fire for food or warmth for it’s said that flames offend the woods themselves. You wouldn’t want that, would you?</p>
-<h3>Ravenous Hordes</h3>
+
+<h3>貪掠團夥 (Ravenous Hordes)</h3>
 <p class="NoIndent">“I’ve bested an orc in single combat,” they crow. “I’ve fought a gnoll and lived to the tell the tale.” Which is no small feat and yet, you know the truth of these boasts. Like vermin, spotting but one of these creatures speaks to a greater doom on the horizon. No orc travels alone. No slavering gnoll moves without his pack. You know that soon, the wardrums will sound and the walls will be besieged by the full fury of the warchief and his tusked berserkers. These are the monsters that will bring civilization, screaming and weeping, to its knees. Unless you can stop them. Best of luck.</p>
-<h3>Twisted Experiments</h3>
+
+<h3>扭曲實驗體 (Twisted Experiments)</h3>
 <p class="NoIndent">For some who learn the arcane arts it’s not merely enough to be able to live for a thousand years or throw lightning bolts that can fry a man. Some aren’t quite satisfied with the power to speak to the dead or draw the angels down from heaven. Hubris calls on those cloaked-and-hooded “scientists” to make a strange and unholy life of their own. No mortal children, these. These are the brood of a mind gone foul with strange magic. In this setting you will find such nightmares as the chimera, dripping poison. Here, too, are the protector golems and mutant apes. All sorts of bad ideas await you in the fallen towers of the mad magicians of Dungeon World.</p>
-<h3>The Lower Depths</h3>
+
+<h3>下界深淵 (The Lower Depths)</h3>
 <p class="NoIndent">Ruins dot the countryside of Dungeon World. Old bastions of long-forgotten civilization fallen to decay, to monsters, or to the whim of a vengeful god. These ruins often cover a much more dangerous truth—catacombs and underground complexes lousy with traps and monsters. Gold, too. Which is why you’re here. Why you’re locked in mortal combat with a tribe of spiteful dark elves. Battling stone giants in caverns the size of whole countries. Maybe, though, you’re the noble souls who’ve travelled to the world’s heart to put an end to the Apocalypse Dragon—the beast who, it is said, will one day swallow the sun and kill us all. We appreciate it, really. We’ll all pray for you.</p>
-<h3>Planar Powers</h3>
+
+<h3>位面勢力 (Planar Powers)</h3>
 <p class="NoIndent">Sometimes, monsters do not come from Dungeon World at all. Beyond the mountains at the edge of the world or below the deepest seas, the sages and wise old priests say that there are gateways to the lands beyond. They speak of elysian fields; rivers of sweet wine and maidens dancing in fields of gold. They tell tales of the paradise of heavens to be found past the Planar Door. Tales tell, too, of the Thousandfold Hell. Of the swirling Elemental Vortex and the devils that wait for the stars to align so they can enter Dungeon World and wreak their bloody havoc. You must be curious to know if these tales are true? What will you see when the passage to the beyond is opened?</p>
 
 
