--- a/appendices/conversion/index.html
+++ b/appendices/conversion/index.html
@@ -131,48 +131,80 @@
 	當你完成上述準備，你將會對整個冒險故事有一個廣泛的瞭解：參與其中的勢力團體、冒險中出現的特別或帥氣怪物、存在於這個世界上的威脅和危害、以及一些玩家角色們可能會感興趣的事物。現在，先把冒險模組放到一邊，並參照地城世界的前置章節：這會是你開始大部分準備的橋段。</p>
 <hr/>
 
-<h2>前置 (Fronts)</h2>
-<p class="NoIndent">The core of any standard adventure, scenario or game session in Dungeon World flows outward from the fronts to the players; the fronts have their impending dooms, the players react, and in the space between, you play the game to find out what happens. The same is true when presenting a converted adventure. Reading through the module, you’ll have noticed things—NPCs, places of interest, special monsters and organizations that might have an impact on the world or some agenda to carry out. Depending on the size of the adventure, there may be just one or a few of these. Take a look through the list of front types and create one for each group.</p>
-<p class="Example">I’m going to convert an old adventure I love; I’ve run it a dozen times in a bunch of different systems and I think it’d be a blast to run my Dungeon World group through. I’ve given myself a quick read through to remind myself what the adventure is all about. In this case, there’s a town being menaced in secret by a wicked cult who worships a squamous reptile god. Sounds like fun! The adventure has a secret dungeon, a corrupt religious order, a bunch of smelly troglodytes and, because the whole town is a mess of suspicion and finger-pointing, some very helpless adventurers. It’s a pretty grim start with lots of bad things to choose from. I’ve decided that all that bad stuff falls under two main fronts: The Cultists and The Troglodyte Clan.</p>
-<p class="Example">Now, I could make the sorcerous naga that lives in the caverns her own front, if I wanted to, or I could add in a campaign front for the Reptile God itself, but I think I’ll only be running this game a few sessions, so I’m going to stay focused. The two fronts I have work together in some ways, but are unique and operate independently, so I’ve separated them.</p>
-<p class="NoIndent">Create these fronts like you would normally, choosing dangers, impending dooms, and grim portents. Ask one or two stakes questions but be sure to leave yourself lots of room—that’s where you can really tie in the characters. Normally, you’d be pulling these things straight out of the inspiration of your brain, but in this case, you’ve got the module to guide you. Think about the fronts as themes, and the dangers as elements from the pages of your module. Look at the kinds of things your fronts are said to be doing in the adventure and how that might go if the PCs were never there to stop it. What’s the worst that could happen if the fronts were able to run rampant? This kind of reading-between-the-lines will give you ammunition for making your hard moves as you play through the adventure. This step is where you’ll turn those stat-block NPCs into either full-fledged dangers themselves, or members of the front’s cast.</p>
-<p>If there are any traps, curses or general effects in the adventure you’d like to write custom moves for, do it now. A lot of old adventures will have elements that call for a “saving throw” to avoid some noisome effect—these can often simply be a cause for a defy danger roll, or can have whole, separate custom moves if necessary. The key here is to capture the intent of the adventure—the spirit of the thing—rather than translate some mechanical element perfectly.</p>
-<p>When you’re done, you’ll have a set of fronts that cover the major threats and dangers the characters will face.</p>
+<h2>前置</h2>
+<p class="NoIndent">
+	在地城世界中，任何標準的冒險、情節、或遊戲聚會都是基於前置向外往玩家發展；前置有它預設的臨頭大難，玩家會對其作出反應，而在這之間的空白，則留給你們用玩的來看看會發生什麼事。這個道理同樣適用於冒險模組的轉換。仔細閱讀冒險模組，你將會注意到一些事物──NPC、有趣的場所、特別的怪物、以及可能對這個世界造成影響的組織、或一些等待被落實的事項。取決於冒險的規模，這些要素可能僅有少數幾個或更多。查看前置類型的列表，並利用這些要素來打造出不同的前置。</p>
+<p class="Example">
+	我打算要動手轉換一個我所鍾愛的老模組；我已經用許多不同的系統跑過它好幾次了，而我相信帶著我地城世界的玩家們經歷這場冒險也一定能讓他們驚艷。我快速地看過了模組的內容，讓自己回想起整個模組的大致樣貌：一座小鎮正被一個崇拜著覆鱗爬蟲之神的邪惡教團暗地威脅著。這聽起來相當有趣！在這個冒險中有一座秘密地城、腐敗的邪教教團、一大群發臭的戰蜥人、以及一群相當無助的冒險者──因為這整座小鎮都充斥著猜忌與責難。這是個情況相當惡劣的開頭，且有著許多壞事可供選擇。我決定把這些壞事統整到兩個主要的前置之中：邪教團體、以及戰蜥人部落。</p>
+<p class="Example">
+	現在，如果我想的話，我可以把那名住在洞穴中的納迦術士寫成一個獨立的前置，或者，我也可以為爬蟲之神本身寫一個戰役前置。不過由於我只打算為這場遊戲主持幾次聚會，因此我想讓故事集中。儘管我準備的這兩個前置會以某種方式互相作用，但它們有別於彼此，且獨立運作，因此我把它們區別了開來。</p>
+
+<p class="NoIndent">
+	你創建這些前置的方式一如往常：選擇危害、臨頭大難、以及惡兆，提出一或二個懸念，並確保你給自己保留了足夠的留白空間──這讓你能夠確實地讓角色們聯繫在一塊。通常來說，你會直接從你腦袋中的靈感萃取出這些玩意兒，但在這種情況下，你拿來轉換的冒險模組將會引導你。將這些前置想成故事的主題，並把危害當成你冒險模組中列出的元素。看看你在前置中記載的事物，如果玩家角色們完全沒有出面阻止它，事情又會怎樣發展。如果前置肆虐氾濫，它可能導致最糟的後果又是如何？這類字裡行間的資訊將會為你提供彈藥，協助你在冒險過程中進行硬動作。在這個步驟中，你將把模組中那些寫滿數據的NPC轉變成豐滿成熟的危害本身、或在前置中登場演出的成員。</p>
+<p>
+	如果冒險中存在任何你想為它們特別編寫自訂動作的陷阱、詛咒、或其他效果，現在就開始著手。很多老派地城冒險中都充斥著各種會要求玩家進行「豁免檢定」以避免承受有害效果的要素──這些事物經常可以被簡化成一個觸發「面對危險」擲骰的肇因，或若有必要，你也可以為它編寫一個完整且獨立的自訂動作。這裡的關鍵是要抓到冒險模組的意圖──它的精神──而不是完整轉換其中機制性的要素。</p>
+<p>
+	當你完成後，你將會得到一組前置，涵蓋了角色們將要面對的主要威脅以及各種危害。</p>
 <hr/>
 
-<h2>怪物 (Monsters)</h2>
-<p class="NoIndent">Most published adventures contained one or two unique monsters not seen anywhere else—custom creatures and denizens of the deeps that could threaten players in some way they hadn’t encountered before. Take a look through the adventure and make sure you’ve caught them all. Many monsters will already have statistics noted in Dungeon World and you can, if you’re happy with them, just make a note of what page they’re on in your fronts and move on from there. If you want to further customize the monsters, or need to create your own, use the rules to do so. In this step, try to avoid thinking about “balancing” the monsters or concerning yourself too much with how many HP a monster has or whether its armor rating matches what you expect. Think more about how the monster is meant to participate in the world. Does it scare off hopeless adventurers? Is it there to bar their way or pose a riddle? What is its purpose in the greater ecology of the dungeon or adventure at large? Translating the spirit of the thing will always give you better, more engaging results. If the monster has a cool power or neat trick you want to write a custom move for, do so! Custom moves are what make Dungeon World feel unique from group to group, so take advantage of them where you can.</p>
-<p class="Example">In my adventure, the monsters run the gamut. I’ve got a scary naga with some mind-controlling powers, an evil priest with divine snake-god magic, a bunch of ruffian cultists, a dragon turtle and a few miscellaneous lizards, crocodiles and snakes. Most of these I can pull from the monster settings, but I’ll create custom stats for the naga and the cultist leader, at least. I want them to feel new and different and have some cool ideas for how that might look. I use the monster creation rules to put them together.</p>
-<h3>Direct Conversion</h3>
-<p class="NoIndent">If you run across a monster that you haven’t already created and which you don’t know well enough to convert using the monster creation rules you can instead convert them directly.</p>
-<h4>Damage</h4>
-<p class="NoIndent">If the monster’s damage is a single die with a bonus of up to +10 keep it as-is. If the monster’s damage uses multiple dice of the same size roll the listed dice and take the highest result. If the monster uses multiple dice of different sizes roll only the largest and take the highest result.</p>
+<h2>怪物</h2>
+<p class="NoIndent">
+	大部分出版的冒險模組中都會包含一到兩個你在其他地方看不到的獨特怪物──那些自創的怪物或深淵住民，以某種玩家們從未見識過的方式威脅著他們。讀遍整個冒險模組，並確保你已經掌握了牠們全部。在地城世界的規則中已經記載了許多怪物的數據，如果你喜歡的話，你可以直接記下牠們的數據寫在哪幾頁上，並繼續下一步的轉換作業。但如果你想要進一步把怪物的數據客製化、或想要創造出屬於你自己的獨特怪物，那麼你可以利用創建怪物的規則來實現這點。</p>
+<p>
+	在這個步驟中，試著先不要去考慮「平衡」怪物的強度、也不要太過在意怪物的 HP 或 護甲值 是否符合你的期望，而是多想想這個怪物會如何參與到這個世界之中。牠會嚇跑絕望的冒險者嗎？牠是會阻擋在他們前進的道路上、還是會拋出謎題考驗他們？牠在整個地成生態或冒險中的目的是什麼？轉換這些事物的核心精神而非表面數據永遠能讓你得到更好也更引人入勝的結果。若這頭怪物掌握著某個酷炫的能力或絕妙的把戲，而你很想為其編寫一個自訂動作，就放手去做吧！自訂動作正是使地城世界得以在不同團體之間展現獨特之處的要素，所以盡可能地利用它們吧。</p>
+<p class="Example">
+	我選擇的冒險模組中包含各種五花八門的怪物。理面有一隻掌握心靈控制能力的可怕納迦、一名能夠施展蛇神魔法的邪惡祭司、一大群殘暴的邪教徒、一隻龍龜、以及各種不同品種的蜥蜴、鱷魚、和蛇。牠們之中大部分都可以從地城世界的怪物環境設定中直接取用，但我打算至少為納迦和邪教領袖另外客製化牠們的數據。我希望讓牠們感覺起來新穎獨特，而我也正好有一些關於牠們看起來該是如何的酷炫想法。我將使用創建怪物的規則來著手實現我的想法。</p>
+
+<h3>直接轉換 (Direct Conversion)</h3>
+<p class="NoIndent">
+	如果你在轉換冒險模組的過程中遇到某種你尚未創建過的怪物，且對牠還沒有熟悉到足以使用創建怪物的規則的話，你可以改為使用下列規則直接轉換牠。</p>
+
+<h4>傷害</h4>
+<p class="NoIndent">
+	如果怪物的傷害只使用一顆骰子決定，且加值最高不超過+10，則保持原樣。如果怪物的傷害使用複數顆相同骰面的骰子，擲出所列的骰子，並取用最高的擲骰結果。若怪物使用複數顆骰面不同的骰子，只擲其中骰面最大的骰子，並取用最高的擲骰結果。</p>
+
 <h4>HP</h4>
-<p class="NoIndent">If the monster’s HP is listed as Hit Dice take the maximum value of the first HD and add one for each additional hit dice. If the monster’s HP is listed as a number with no Hit Dice divide the HP by 4.</p>
-<h4>Armor</h4>
-<p class="NoIndent">If the monster’s AC is average give it 1 armor. If the monster’s AC is low, give it 0 armor. If the monster’s AC is high give it 2 armor, 3 armor for beasts that are all about defense. If it’s nearly invulnerable, 4 armor. +1 armor if its defenses are magical.</p>
-<h4>Moves and Instinct</h4>
-<p class="NoIndent">Look at the special abilities or attacks listed for the monster, these form the basis for its moves.</p>
+<p class="NoIndent">
+	如果怪物的 HP 是以生命骰的方式呈現，則取第一顆生命骰的最大值，且每一顆額外的生命值都會再讓 HP 額外追加一點。若怪物的HP是直接以數值呈現，而非使用生命骰的話，則將 HP 除以 4。</p>
+
+<h4>護甲值</h4>
+<p class="NoIndent">
+	如果怪物的 AC 為平均值，給牠 1 點護甲值。如果怪物的 AC 低於平均，則給牠 0 點護甲值。若怪物的 AC 很高，則給牠 ２ 點護甲值；3 點護甲值會體現再納些全身都是防禦的野獸身上。而若牠近乎無懈可擊，則給牠 4 點護甲值。若牠的防禦帶有魔法性質，則額外 +1 護甲值。</p>
+
+<h4>動作 和 本能</h4>
+<p class="NoIndent">
+	看看怪物數據底下列出的特殊能力或攻擊項，這些正是構成其怪物動作的基礎資訊。</p>
 <hr/>
 
-<h2>地圖 (Maps)</h2>
-<p class="NoIndent">One of the biggest differences between Dungeon World and many other fantasy RPGs is the concept of maps and mapping. In many games, you’ll see a square-by-square map denoting precisely what goes where, often presented to give as much detail as possible and leave little to the imagination save the description of the location in question. Dungeon World often leans the opposite direction—maps marked with empty space and a one or two word description like “blades” or “scary.” To adapt an existing adventure for use in Dungeon World, simply keep in mind your principles and agenda. Primarily, keep in mind that as the GM, it’s your job to “draw maps, leave blanks” and to “ask questions and use the answers.”</p>
-<p>To that end, it’s often best to re-draw the map entirely, if you have time. Don’t copy it inch-by-inch but redraw it freehand, leaving spaces and drawing out new rooms, if you’d like. Don’t stick to the map exactly as written, but give yourself some creative license. The idea here is to give yourself room to expand—to allow the players’ reaction to the adventure to surprise and inspire you. If you’ve got the whole map nailed down in advance, there’s nowhere to go you don’t already know about, is there? Pick a few rooms that don’t interest you and wipe out their inhabitants. Draw a new tunnel or two. This will give you some space to play around once you get into the game itself.</p>
-<p>If you don’t have the time or inclination to re-draw the map, don’t worry. Just take the original map, make a few notes about what might go where and leave the rest blank. When the players go into that room marked “4f” don’t look it up, just make a guess at what might be there based on your notes and what else has been happening. You’ll find a comfortable balance between freely playing out what happens and consulting your prep as you go along.</p>
-<p class="Example">The maps that come with my adventure are a good mix of fun and cool and sort of boring fluff. I’ll keep most of what the dungeon describes under the city—the lair of the troglodytes and the secret caves where the captive villagers are being kept—but I’m going to throw away a lot of the stuff about the village itself and just leave blank spaces. It’ll give me room to use the answers to questions like “Who do you already know, here?” and “Who lives in the abandoned hut up the road?” I’ve made some notes about where the map and my fronts intersect, but mostly I’ve just given myself room to explore.</p>
+<h2>地圖</h2>
+<p class="NoIndent">
+	地城世界和許多其他奇幻RPG遊戲最大的差異之一就在於地圖繪製的概念。你會在許多遊戲中看到一張方方正正的地圖上精確地指出了什麼東西位於什麼地方，它將提供盡可能多的細節，且除了相關地點的描述之外，幾乎沒有什麼留給想像力發揮的空間。地城世界則正好相反──地圖上留下了大量空白，並僅僅標記了一二個像是「刀鋒」或「恐怖」之類的字詞描述。如果你打算在地城世界中使用既有的冒險模組，那麼你最好把你的原則和目標事項謹記在心。其中最重要的是記住，做為GM，你的工作之一正是「畫出地圖，但適度留白」以及「詢問，並利用得到的答案」。</p>
+<p>
+	要達到這個目的，最好的辦法通常是趁你有時間的時候把整張地圖重新繪製一遍。不要試圖分毫不差地複製它，而是按你的意思徒手重繪，適度留白，並勾勒出新的場所。你並不需要完全依照原本地圖上的內容重畫，讓自己有點發揮創意的自由。重點是，給自己一些能夠留待日後發展的空間──讓玩家們在冒險中的回饋為你帶來驚喜，並賦予你日後創作的靈感。如果你事前就定案了整張地圖的樣貌，那麼你就再也沒有未知的地點可以探索了，不是嗎？挑選幾個原本地圖上你不敢興趣的場所或房間，抹除裡面的住民，添加一條或兩條新的隧道上去。這麼做將會讓你在開始遊戲之後，仍能保有轉圜發展的餘地。</p>
+<p>
+	就算你沒有時間或興趣把地圖重畫也沒關係。你可以直接把原本的地圖拿出來，簡單地記錄一下什麼東西可能會在什麼地方，並把剩餘的部分留空。當玩家們來到那個標有「4f」的房間時，不要查閱你的冒險模組，而是根據你做的筆記來設想那裡可能有著什麼、且可能發生什麼事。隨著遊戲的進行，你將會慢慢在自由即興發揮以及查詢事前準備之間找到一個舒適的平衡。</p>
+<p class="Example">
+	我的冒險模組所附帶的地圖儘管混合了許多有趣又酷炫的元素，但也摻雜了一些無聊的內容。我想要保留城市底下關於地城的大部分內容──戰蜥人們的巢穴、以及關押那些被俘虜村民的秘密洞穴──但我也打算把關於村莊本身的各種設定扔掉，留下空白。這樣我就能有一些空間來填入我透過詢問得到的答案，像是「你已經認識這裡的誰了？」和「是誰住在路邊那座廢棄的小屋中？」我做了一些筆記紀錄這張地圖和我所設計的前置之間會在哪裡交會，但其他大部分的區域，我就只是留下給自己日後探索的空間。</p>
 <hr/>
 
-<h2>魔法&amp;財寶 (Magic &amp; Treasure)</h2>
-<p class="NoIndent">Two things that are, traditionally, a “big deal” in published modules are treasure and magic items. This is less relevant in Dungeon World (as the reward cycle for characters is more about “doing” than about “having”) but it’s still fun to drudge through a dungeon or explore lost ruins and come up with cool magic items and piles of gold! Like the map, it’s useful to get an idea of the kinds of stuff that might be found in the adventure—anything particularly called out in the text as relevant to the adventure itself (a magic sword that can be used to wound the golem on level 4, or a pendant belonging to the prince captured in room 3) is particularly important. Like monsters, it’s better to look at magic items in terms of what purpose they fulfill: what they’re “for” rather than the damage or armor bonus they might give. Dungeon World isn’t built on balancing treasure against character level, for example, so just look through the adventure for items that seem cool or fun or interesting and create new magic items (with custom moves as necessary) wherever you think it’s needed. This is possibly the easiest step of conversion. Again, you can leave yourself exploratory room, here. Make notes to yourself like “The wizard has a magic staff, what does it do?” and find that out in play. Ask the players about it, see what they have to say. Let spout lore do some work for you. “You’ve heard that the wizard here has a strange magical staff. What rumors have you heard of its origins?”</p>
+<h2>魔法&amp;財寶</h2>
+<p class="NoIndent">
+	傳統上，出版的冒險模組中有兩個東西佔據了舉足輕重的地位，那就是財寶和魔法物品。然而在地城世界中，它們就沒有那麼重要了（因為這個規則的角色獎勵系統更著重在「行動」，而非「擁有」）。儘管如此，若能在地城中埋首奮戰之後、或是在探索失落的遺跡之後收穫到成堆的金幣或酷炫的魔法物品，仍是件值得興奮雀躍的事情。就跟地圖一樣，冒險模組中列出的各種東西可以為你提供相當實用的靈感想法──其中，那些特別在冒險文本中被提到的事物尤其重要（一把能用來破壞鎮守第四層樓的魔像的魔法寶劍、或是屬於被囚禁在三號房間的王子的墜飾）。</p>
+<p>
+	與處理怪物時的做法相似，你最好先掌握這些魔法物品被設計的用途：理解它們是「為了什麼」而存在這裡，而不是它們可能提供的傷害或護甲加值。地城世界並不是建立在財寶道具與角色等級之間的平衡上，因此你在閱讀冒險模組時只需要專注找尋那些酷炫、好玩、或有趣的事物，並在有需要的時候創建新的魔法物品就好（若有需要，你也可以為其編寫自訂動作）。這或許是轉換過程中最容易的步驟。再強調一次，你仍然可以在這裡為自己留下日後探索的空間。給自己做一些筆記，像是「瘋狂法師擁有一柄魔杖，它是做什麼的？」，然後在遊玩的過程中找出答案。詢問你的玩家們，看看他們會給你什麼樣的回答。讓他們透過<b>憶述見聞</b>來代替你做工：「你曾聽說過居住在這裡的瘋狂法師擁有一把古怪的魔杖，告訴我，那些關於它來歷的傳聞是怎麼說的？」</p>
 <hr/>
 
-<h2>Introductory Moves</h2>
-<p class="NoIndent">This step is entirely optional, but can be really useful when running through an adventure for a convention group or other group where running through a full “first session” process just isn’t possible. You can take variables of the adventure and create “hooks” for that adventure, writing custom moves to be made after character creation but before play starts. These moves will serve to engage the characters in the fiction and give them something special to prepare them or hook them into what’s about to happen. You can write one for each class, or bundle them together, if you like. Here’s an example:</p>
-<p class="Example">Fighter, someone who loves you gave you a gift before you left for a life of adventure. Roll+CHA and tell us how much they love you. On a 10+ pick two heirlooms, on a 7-9 pick one. On a miss, well, good intentions count for something, right?</p>
-<ul><li>A vial of antivenom</li>
-<li>A shield that glows with silver light</li>
-<li>A rusted old key in the shape of a lizard</li></ul>
-<p class="NoIndent">These sorts of moves can give the players the sense that their characters are tied to the situation at hand, and open the door for more lines of question-and-answer play that can fill the game world with life. Think about the fronts, the things they endanger, the riches they might protect and their impact on the world. Let these intro moves flow from that understanding, creating a great kickstart to the adventure.</p>
+<h2>導入動作 (Introductory Moves)</h2>
+<p class="NoIndent">
+這個步驟完全是非必須的，但當你需要主持一場地城世界的遊戲，而你的玩家們卻是一群在TRPG集會中初次見面的成員、或因為各種其他原因而不太可能完整經歷一場「第一次聚會」流程的話，那麼這個步驟就顯得相當有用。你可以利用冒險的多變性為冒險創造出不同的「引鉤」，編寫自訂動作，並在角色創建結束、但遊戲正式開始前進行它們。這些導入動作將被用來吸引故事中的角色，給他們一些特別的東西來做準備、或引導他們參與到即將發生的事件之中。你可以為每個職業分別撰寫不同的導入動作，或把他們通通合在一起處理。以下是個關於導入動作的範例：</p>
+<div class="Example">
+戰士，某個愛著你的人在你踏上冒險生涯之前給了你一份禮物。擲+魅力，並告訴我們他有多愛你。擲出10+時，選擇兩項傳家寶。擲出7-9時，選擇一項。擲出失敗時，嗯，起碼好意也是挺有價值的，對吧？
+<ul style="margin-bottom: 0;">
+	<li>一小瓶蛇毒血清</li>
+	<li>一面散發著銀色光輝的盾牌</li>
+	<li>一把蜥蜴形狀的老舊鏽蝕鑰匙</li></ul></div>
+<p class="NoIndent">
+	這類動作能讓玩家們感覺到他們的角色與當下的情境息息相關，並借此引導出更多可以用來填補遊戲世界，讓其充滿生命力的問題與回答。回憶一下前置中所描繪的危害，想想他們所威脅的事物、他們可能守護的財富、以及他們對這個世界的影響。以這些情報為源頭發展你的導入動作，為你們的冒險故事打造一個宏大且壯闊的開端。</p>
 
 
           </div>
